# InvestmentAnalysis

./: .gitignore  CMakeLists.txt
include/util/: util.h
src/: company.h  main.cpp
src/company/: company.cpp  company.h  consumer_defensive.cpp  consumer_defensive.h
src/metric/: metric.h  revenue.cpp  revenue.h
